# offline-keystore

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  formatting.yaml  license-check.yaml  lint.yaml  test.yaml
data/: gimlet-rot-code-signing-dev-a.keyspec.json  gimlet-rot-code-signing-dev-b.keyspec.json  gimlet-rot-code-signing-dev-online-a1.csrspec.json  gimlet-rot-code-signing-dev-online-a2.csrspec.json  gimlet-rot-code-signing-dev-online-b1.csrspec.json  gimlet-rot-code-signing-dev-online-b2.csrspec.json  gimlet-rot-code-signing-rel-a.keyspec.json  gimlet-rot-code-signing-rel-b.keyspec.json  gimlet-rot-code-signing-rel-online-a1.csrspec.json  gimlet-rot-code-signing-rel-online-a2.csrspec.json  gimlet-rot-code-signing-rel-online-b1.csrspec.json  gimlet-rot-code-signing-rel-online-b2.csrspec.json  gimlet-rot-stage0-code-signing-dev-a.keyspec.json  gimlet-rot-stage0-code-signing-dev-b.keyspec.json  gimlet-rot-stage0-code-signing-dev-online-a1.csrspec.json  gimlet-rot-stage0-code-signing-dev-online-a2.csrspec.json  gimlet-rot-stage0-code-signing-dev-online-b1.csrspec.json  gimlet-rot-stage0-code-signing-dev-online-b2.csrspec.json  gimlet-rot-stage0-code-signing-prod-b.keyspec.json  gimlet-rot-stage0-code-signing-prod-online-a1.csrspec.json  gimlet-rot-stage0-code-signing-prod-online-a2.csrspec.json  gimlet-rot-stage0-code-signing-prod-online-b1.csrspec.json  gimlet-rot-stage0-code-signing-prod-online-b2.csrspec.json  key-request-ecp384.json  key-request-rsa4k.json  p384-ecp.pem  p384-sha384.csr.pem  p384-sha384.csrspec.json  platform-identity-intermediate.keyspec.json  platform-identity-root-a.keyspec.json  psc-rot-code-signing-dev-a.keyspec.json  psc-rot-code-signing-dev-b.keyspec.json  psc-rot-code-signing-dev-online-a1.csrspec.json  psc-rot-code-signing-dev-online-a2.csrspec.json  psc-rot-code-signing-dev-online-b1.csrspec.json  psc-rot-code-signing-dev-online-b2.csrspec.json  psc-rot-code-signing-rel-a.keyspec.json  psc-rot-code-signing-rel-b.keyspec.json  psc-rot-code-signing-rel-online-a1.csrspec.json  psc-rot-code-signing-rel-online-a2.csrspec.json  (+43 more)
docs/: debug-credentials.md  intermediate.md
script/: _ceremony  burn-cd  ceremony  end-session  handoff  hash-cd  hash-cd.sh  import-input  mount-input  oks-lib.sh  replace-auth.sh  replace-auth.ysh  restore-auth.sh  signing-ceremony  start-session  write-iso  write-iso.sh  write-output
specs/: README.md  production-gimlet-rot-code-signing-dev-b.keyspec.json  production-gimlet-rot-code-signing-rel-a.keyspec.json  production-gimlet-rot-code-signing-rel-b.keyspec.json  production-psc-rot-code-signing-rel-a.keyspec.json  production-sidecar-rot-code-signing-rel-a.keyspec.json  production-sidecar-rot-code-signing-rel-b.keyspec.json  staging-gimlet-rot-code-signing-dev-a.keyspec.json  staging-gimlet-rot-code-signing-rel-a.keyspec.json  staging-gimlet-rot-code-signing-rel-b.keyspec.json  staging-psc-rot-code-signing-dev-a.keyspec.json  staging-psc-rot-code-signing-dev-b.keyspec.json  staging-psc-rot-code-signing-rel-b.keyspec.json  staging-sidecar-rot-code-signing-dev-a.keyspec.json  staging-sidecar-rot-code-signing-rel-a.keyspec.json  staging-sidecar-rot-code-signing-rel-b.keyspec.json
specs/production/: gimlet-rot-code-signing-dev-a.keyspec.json  gimlet-rot-code-signing-dev-b.keyspec.json  gimlet-rot-code-signing-rel-a.keyspec.json  gimlet-rot-code-signing-rel-b.keyspec.json  gimlet-rot-dev-b.keyspec.json  gimlet-rot-rel-a.keyspec.json  gimlet-rot-rel-b.keyspec.json  platform-identity-root-a.keyspec.json  psc-rot-code-signing-dev-a.keyspec.json  psc-rot-code-signing-dev-b.keyspec.json  psc-rot-code-signing-rel-a.keyspec.json  psc-rot-code-signing-rel-b.keyspec.json  psc-rot-dev-b.keyspec.json  psc-rot-rel-a.keyspec.json  psc-rot-rel-b.keyspec.json  sidecar-rot-code-signing-dev-a.keyspec.json  sidecar-rot-code-signing-dev-b.keyspec.json  (+4 more)
src/: alphabet.rs  backup.rs  ca.rs  cdrw.rs  config.rs  hsm.rs  lib.rs  main.rs  secret_reader.rs  secret_writer.rs  util.rs
util/: format_csr.rs
(+32 files in other folders)
