[package]
name = "oks"
version = "0.2.0"
description = """
A utility and library for managing and interacting with the offline keystore.
"""
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive", "env"] }
env_logger = "0.10.2"
fs_extra = "1.3.0"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.22"
lpc55_sign = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false, version = "0.3.4" }
lpc55_areas = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false, version = "0.2.4" }
num-bigint = "0.4.6"
# p256 v0.13 has a dependency that requires rustc 1.65 but we're pinned
# to 1.64 till offline-keystore-os supports it
p256 = "0.12"
pem-rfc7468 = { version = "0.7.0", features = ["alloc", "std"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rpassword = "7.3.1"
serde = "1.0.210"
serde_json = "1.0.128"
serde_with = "3.9.0"
static_assertions = "1.1.0"
tempfile = "3.13.0"
textwrap = "0.16.1"
thiserror = "1.0.64"
# vsss-rs v3 has a dependency that requires rustc 1.65 but we're pinned
# to 1.64 till offline-keystore-os supports it
vsss-rs = "2.7.1"
x509-cert = "0.2.5"
yubihsm = { git = "https://github.com/oxidecomputer/yubihsm.rs", branch = "session-close", features = ["usb", "untested"] }
zeroize = "1.8.1"
