[package]
name = "oks"
version = "0.3.3"
description = """
A utility for managing and interacting with the offline keystore.
"""
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive", "env"] }
env_logger = "0.10.2"
fs_extra = "1.3.0"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.22"
lpc55_sign = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false, version = "0.3.4" }
lpc55_areas = { git = "https://github.com/oxidecomputer/lpc55_support", default-features = false, version = "0.2.4" }
num-bigint = "0.4.6"
p256 = "0.13"
pem-rfc7468 = { version = "0.7.0", features = ["alloc", "std"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
rpassword = "7.4.0"
serde = "1.0.219"
serde_json = "1.0.141"
serde_with = "3.14.0"
static_assertions = "1.1.0"
tempfile = "3.20.0"
textwrap = "0.16.2"
thiserror = "2.0.12"
vsss-rs = "5.1.0"
x509-cert = "0.2.5"
yubihsm = { git = "https://github.com/oxidecomputer/yubihsm.rs", branch = "session-close", features = ["usb", "untested"] }
zeroize = "1.8.1"
zeroize_derive = "1.4.2"
glob = "0.3.2"
rsa = "0.9.8"
sha2 = "0.10.9"
zerocopy = { version = "0.8.26", features = ["derive", "std", "zerocopy-derive"] }
const_format = "0.2.34"
